fix (views): fixed the situation in which the 'continue' button aligns with the footer

--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -111,8 +111,9 @@ h1{
   margin-bottom: 10%;
 }
 
-
-
+.continue {
+  padding-bottom: 60px;
+}
 
 /*====================
    Footer
